<resources>
    <string name="app_name">Spotify For Artists</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="create">Create</string>
    <string name="become_an_artist">Become An Artist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>